--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: flex-end;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
 }
 
 #gallery-frame {
@@ -11,7 +10,6 @@
     aspect-ratio: 0.56/1;
     border: 1.5px solid #f5f5f5;
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
     overscroll-behavior: none;
     scrollbar-width: none;
     -ms-overflow-style: none;
